# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.rst  pyproject.toml
src/pre_commit_hooks/: add_commit_msg_ruler_comment.py  remove_jsonc_comments.py
